--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     verde.addEventListener("click", () => {
         imgCopao.src = "./img/img1.png"
-        circulo.style.background = "#fffbcb"
+        circulo.style.background = "#017143"
     })
 
     amarelo.addEventListener("click", () => {
