--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <body>
     <header>
         <img src="./img/logo.png" alt="logo" class="logo">
-        <a href="teste">Menu</a>
-        <a href="teste">Nosso Café</a>
-        <a href="teste">Impacto Social</a>
-        <a href="teste">Encontre uma Loja</a>
+        <button class="topico">Menu</button>
+        <button class="cafe">Nosso Café</button>
+        <button class="social">Impacto Social</button>
+        <button class="loja">Lojas</button>
+    
         <img src="./sb-historias-logo.svg" alt="historias" class="logo-historia">
         
     </header>
@@ -45,28 +46,5 @@
 
 </body>
 
-<script>
-    let circulo = document.querySelector(".circulo")
-    let imgCopao = document.querySelector(".grande")
-    let verde = document.querySelector(".verde")
-    let amarelo = document.querySelector(".amarelo")
-    let rosa = document.querySelector(".rosa")
-
-    verde.addEventListener("click", () => {
-        imgCopao.src = "./img/img1.png"
-        circulo.style.background = "#017143"
-    })
-
-    amarelo.addEventListener("click", () => {
-        imgCopao.src = "./img/img2.png"
-        circulo.style.background = "#ffcbac"
-    })
-
-    rosa.addEventListener("click", () => {
-        imgCopao.src = "./img/img3.png"
-        circulo.style.background = "#d752b1"
-    })
-
-</script>
-
 </html>
+<script src="script.js"></script>
